--- a/csss/saved_resource.html
+++ b/csss/saved_resource.html
@@ -1,8 +1,8 @@
 
 <!-- saved from url=(0011)about:blank -->
 <html><head>
-  <!--meta http-equiv="Content-Type" content="text/html; charset=UTF-8"-->
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <!--meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"-->
 </head>
   <body>
     
